k8s/service-bot.yaml
apiVersion: v1
kind: Service
metadata:
  name: lacriminalite-bot
spec:
  selector:
    app: lacriminalite-bot
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
