k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: lacriminalite-web
spec:
  selector:
    app: lacriminalite-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
